--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,9 @@
 @import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+	background-color: #2d3748;
+}
